# H5O3

./: .gitignore  ;  Cargo.toml  README  README.md  pyproject.toml
.github/workflows/: rust.yml
examples/: filter_linc_target.rs  h5info.rs  polconv.rs
src/: h5parm.rs  lib.rs  lib.rs.backup  lib.rs.simple
