[package]
name = "lofar-h5parm-rs"
version = "0.0.0"
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "filter-linc-target"

[dependencies]
anyhow = "1.0.79"
thiserror = "1.0.56"
hdf5 = "0.8.1"
ndarray = { version = "0.15.6", features = ["rayon"] }
clap = { version = "4.4.6", features = ["derive"] }
num = "0.4.3"
medians = "3.0.12"

[dev-dependencies]
hdf5 = "0.8.1"
ndarray = "0.15.6"
rayon = "1.8.0"
